[package]
name = "vpe"
version = "0.1.0"
authors = ["trionprog <trionprog@gmail.com>"]

[dependencies]
serde="0.9.15" #not 1.0.4
serde_derive="0.9.15" #not 1.0.4. This is really difficult to investigate what version of serde it wants
bincode="0.7.0" #not 0.8.0. This is really difficult to investigate what version of serde it wants
redis = "0.8.0"
cdrs = "1.0.0-rc.1" #it wants uuid 0.4.0

[dependencies.uuid]
version = "0.4.0" #of course I want use 0.5.0, but you advice.
features = ["serde"]

[dependencies.postgres]
version = "0.14.1"
features = ["with-uuid"]
